# ubuntu_speak

./: .gitignore  AGENTS.md  README.md  pyproject.toml
data/: ubuntu-speak.desktop
debian/: changelog  control  copyright  postinst  rules
scripts/: upload-release.sh
src/ubuntu_speak/: __init__.py  asr.py  cli.py  clipboard.py  config.py  evdev_listener.py  indicator.py  notifier.py  recorder.py  settings_window.py  shortcut_manager.py  state.py
