[project]
name = "ubuntu-speak"
version = "0.3.0"
description = "Ubuntu 语音输入法 - 基于百炼平台语音识别 API"
requires-python = ">=3.12"
dependencies = [
    "dashscope>=1.14.0",
    "evdev>=1.7.0",
]

[project.scripts]
ubuntu-speak = "ubuntu_speak.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ubuntu_speak"]
